# assigment_Ingensoma-

./: 60000344.csv  60000364.csv  README.md
aggregator/: README  aggregate.py
aggregator/.ipynb_checkpoints/: aggregate-checkpoint.ipynb
output/: Strategy1.orders.csv  Strategy2.orders.csv
strategy_runner/: AUTHORS  Makefile.am  README  configure.ac
strategy_runner/src/: account.h  datadef.h  datafeed.cc  datafeed.h  job.cc  job.h  jobctrl.cc  jobctrl.h  main.cc  runner.cc  runner.h  strategy_factory.cc  strategy_factory.h  util.cc  util.h
strategy_runner/src/strategy/: strategy1.cc  strategy1.h  strategy2.cc  strategy2.h
